--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipinstagram/faq" />
   <title>FAQ | gaus</title>
   <style>
-    html,body,.root{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary::-webkit-details-marker{display:none}details summary{width:100%;padding:.75rem 0;border-top:1px solid #000;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary:after{content:"+";color:#000;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary:after{transform:rotate(45deg);}details summary{outline:0}details > div, details > p, details > ul, details > ol{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
+    html,body,.root{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary::-webkit-details-marker{display:none}details summary{width:100%;padding:.75rem 0;border-top:1px solid rgba(0,0,0,.4);position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary:after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary:after{transform:rotate(45deg)}details summary{outline:0}details>div,details>p,details>ul,details>ol{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
   </style>
 </head>
 
@@ -62,7 +62,7 @@
                               <li>Or your folder of choice at a removable storage if you have one.</li>
                             </ul>
 
-                              This way the data is more managable at larger storage. You can always change locations to organize better, no problems. Be sure to enable the requested permissions. If not, useless.
+                            This way the data is more managable at larger storage. You can always change locations to organize better, no problems. Be sure to enable the requested permissions. If not, useless.
 
                           </div>
                           </summary>
@@ -252,7 +252,8 @@
                           <summary>Nothing downloaded?</summary>
                           <div>
                             Wait for a few seconds. In order for auto download to work, be sure that <b>VIP Downloader</b> is already open before downloading anything on Instagram. You can tap <b>VIP Downloader</b> icon when prompted to verify
-                            the download process. Or ignore it to continue browsing. The icon will disappear after a few seconds. Yet images or videos should be downloaded automatically as long as this app is not killed. <br><br>If failed for a reason, you can
+                            the download process. Or ignore it to continue browsing. The icon will disappear after a few seconds. Yet images or videos should be downloaded automatically as long as this app is not killed. <br><br>If failed for a
+                            reason, you can
                             always manually paste the clipboard link into the provided text input. Lastly, also check if the image or video is already downloaded. Be sure to bookmark or fave them at Instagram to avoid unnecessary confusion with
                             downloads.
 
@@ -330,7 +331,8 @@
                         <details>
                           <summary>How does the reward or point system work?</summary>
                           <div>
-                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after a minimum 32 seconds
+                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad
+                            after a minimum 32 seconds
                             threshold met, you will earn 10 points. If you close it before the threshold 32 seconds, you will still get the bonus point 2, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be
                             executed.
                             <ul>
