--- a/project/vipdrupal/faq/index.html
+++ b/project/vipdrupal/faq/index.html
@@ -223,6 +223,7 @@
       </footer>
     </div>
   </div>
+  <script id="config">{"BANNER": true, "BACK_HOME": false, "FEED": false, "PODCAST": false, "REWARD": false, "STACK": false, "SLIDE": true}</script>
 </body>
 
 </html>
