--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -413,6 +413,7 @@
       </footer>
     </div>
   </div>
+  <script id="config">{"BANNER": false, "BACK_HOME": false, "NO_WM": true, "ONE_DL": true, "REWARD": true, "SCRAPER": true, "STACK": false, "SLIDE": false}</script>
 </body>
 
 </html>
