--- a/project/vipdrupal/faq/index.html
+++ b/project/vipdrupal/faq/index.html
@@ -214,7 +214,7 @@
               <div data-drupal-messages-fallback class="hidden"></div>
               <div id="block-footercopyright--2" class="block--footercopyright--2 block block--block-content">
                 <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                  <p>© 2008 gaus</a>.</p>
+                  <p>© 2008 gaus.</p>
                 </div>
               </div>
             </div>
@@ -223,7 +223,7 @@
       </footer>
     </div>
   </div>
-  <script id="config">{"BANNER": true, "BACK_HOME": false, "FEED": false, "PODCAST": false, "REWARD": false, "STACK": false, "SLIDE": true}</script>
+  <script id="config" type="application/json">{"BANNER": true, "BACK_HOME": false, "FEED": false, "PODCAST": false, "REWARD": false, "STACK": false, "SLIDE": true}</script>
 </body>
 
 </html>
