--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -65,7 +65,6 @@
                             This way the data is more managable at larger storage. You can always change locations to organize better, no problems. Be sure to enable the requested permissions. If not, useless.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Private and Public gates differences?</summary>
@@ -82,13 +81,12 @@
                               <li>can use Instagram app, or browsers.</li>
                               <li>doesn't require a login via this app to access public or private accounts.</li>
                               <li>can only download via Instagram <b>Copy link</b> at public or private accounts</li>
-                              <li>can not scrape.</b></li>
+                              <li>can not scrape.</li>
                             </ul>
                             Due to the latest restrictions, providing a dummy or nothing-to-lose Instagram account is required via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as
                             the currently-in-use Instagram account, except for private accounts (or at least both accounts, if different, should follow the same private accounts).
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>How does downloading private account media work?</summary>
@@ -103,7 +101,6 @@
                             the hood due to Instagram restrictions.
 
                           </div>
-                          </summary>
                         </details>
 
                         <details>
@@ -119,7 +116,6 @@
                             Again this is not scraping. It is just a convenient way to download multiple files at one click. Use it wisely and responsibly for good purposes.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Instagram scraping requirements?</summary>
@@ -135,7 +131,6 @@
                             </ul>
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Can I navigate away while scraping?</summary>
@@ -144,7 +139,6 @@
                             human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Is scraping safe for my account?</summary>
@@ -152,7 +146,6 @@
                             No. Use at your own risk. Use a dummy account. It is not allowed. You had been warned before scraping. If not prepared, and not knowing how to play nice, do not scrape. Necessary measures had been provided to minimize the
                             algorithm triggers such as to make it behave like human with some configurable intervals, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Any scrape recommendations?</summary>
@@ -168,7 +161,6 @@
                               <li>Use the same dummy accounts, and do trials and errors at your own descretion.</li>
                             </ul>
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Why scraping not work?</summary>
@@ -176,7 +168,6 @@
                             Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 30 points is required before you close it. If you close it too early, scraping is not triggered.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>What is <i>Organize directories</i> for?</summary>
@@ -184,7 +175,6 @@
                             To organize your pictures/ videos thematically for offline convenience. You can put wild life media into <b>Wildlife</b> folder, food and beverages into <b>Cooking</b>, etc. Above all, you can put them all into an external
                             removable disk for greater storage rooms rather than being stored internally.
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>The app is not functioning when I remove my SD card?</summary>
@@ -192,7 +182,6 @@
                             Yes, of course. If you chose a removable SD card for storage, then removed/ plugged out, the app has no way to fetch its stored data. Unless you have multiple slots. Plugging it back in should make the app functional
                             again.
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>I forgot my PIN. How to reset?</summary>
@@ -201,7 +190,6 @@
                             above-mentioned storage, but no longer accessible by this app. In order to have a functional app again with the old data, rebuild database based on your database backup at runtime. Visit <b>Settings > Database > Rebuild
                               database</b>. This app should be functional again.
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>I purchase the pro version. How to migrate old data into new app?</summary>
@@ -209,7 +197,6 @@
                             Visit <b>Settings > Database > Migrate database</b>. The old data should be re-imported into the new app. Be sure to backup the free version beforehand.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>I rebuilt database, succeeded, but see no images/ videos?</summary>
@@ -219,7 +206,6 @@
                             free and pro.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Some features are not functioning?</summary>
@@ -229,7 +215,6 @@
                             sideloading is not supported as we use the new upload format using App bundle, not regular APK. Only install via Google Play Store!
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Sometimes I get pictures and videos downloaded real fast, sometimes slow?</summary>
@@ -237,7 +222,6 @@
                             First check your internet connection. I also noticed Instagram may slightly be busy at times. Bear with it.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>How to repost videos or pictures?</summary>
@@ -246,7 +230,6 @@
                             sure to give credit to owners, and seek for their permissions. Or provide the configurable watermark as a credit in the least.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Nothing downloaded?</summary>
@@ -258,7 +241,6 @@
                             downloads.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>How to edit my created hashtags?</summary>
@@ -266,7 +248,6 @@
                             Click or long press the item on its listing page.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>I copied hashtags and captions, now what?</summary>
@@ -274,7 +255,6 @@
                             Hit <b>Repost</b> button. At Instagram, when prompted to add caption, simply long press on the textarea, and press <b>Paste</b> prompt.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Can I set a video cover as a wallpaper, too?</summary>
@@ -284,7 +264,6 @@
                             video thumbnails are created by default.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>I want hamburger, not home-back arrow.</summary>
@@ -293,7 +272,6 @@
                             left edge to reveal the menu.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Why I see a slight blinking when viewing the gallery large image?</summary>
@@ -301,7 +279,6 @@
                             Images are firstly loaded as small thumbnails to avoid OutOfMemory issue. Once you focus on a gallery image, a larger image version replaces the thumbnail.
 
                           </div>
-                          </summary>
                         </details>
 
                         <details>
@@ -310,7 +287,6 @@
                             <b>Settings > Private mode > Kill the service</b>. The notification needs to stand by to listen for "COPY LINKS" if using non-private mode. You can kill it if you always goes Private mode.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Does video watermark work?</summary>
@@ -318,7 +294,6 @@
                             Not yet, sorry. I haven't been able to make it nor remove that option due to a mix of videos and images. Please ignore for videos for now. It should work for images, though.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>I downloaded one post, but my points deducted by 10?</summary>
@@ -326,7 +301,6 @@
                             At one post, it may contain 10 media such as seen at carousel post. The download is per media item, not post.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>How does the reward or point system work?</summary>
@@ -346,7 +320,6 @@
                             interruptions. <br><br>If you are sick of points, consider a PRO version.
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>FREE vs. PRO versions?</summary>
@@ -370,7 +343,6 @@
                             </ol>
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Have questions, suggestions, bug reports, or feedback?</summary>
@@ -379,14 +351,12 @@
                               help people, at least don't hurt them</i>, says Dalai Lama. Thank you!
 
                           </div>
-                          </summary>
                         </details>
                         <details>
                           <summary>Tips!</summary>
                           <div>
                             Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better.
                           </div>
-                          </summary>
                         </details>
                       </div>
                     </div>
@@ -404,7 +374,7 @@
               <div data-drupal-messages-fallback class="hidden"></div>
               <div id="block-footercopyright--2" class="block--footercopyright--2 block block--block-content">
                 <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                  <p>© 2008 gaus</a>.</p>
+                  <p>© 2008 gaus.</p>
                 </div>
               </div>
             </div>
@@ -413,7 +383,7 @@
       </footer>
     </div>
   </div>
-  <script id="config">{"BANNER": false, "BACK_HOME": false, "NO_WM": true, "ONE_DL": true, "REWARD": true, "SCRAPER": true, "STACK": false, "SLIDE": false}</script>
+  <script id="config" type="application/json">{"BANNER": true, "BACK_HOME": false, "NO_WM": true, "ONE_DL": true, "REWARD": true, "SCRAPER": true, "STACK": false, "SLIDE": false}</script>
 </body>
 
 </html>
